# ChangeLog for dev-libs/apr-util
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.186 2013/08/06 13:13:37 ago Exp $

  06 Aug 2013; Agostino Sarubbo <ago@gentoo.org> apr-util-1.5.2.ebuild:
  Stable for s390, wrt bug #477296

  04 Aug 2013; Agostino Sarubbo <ago@gentoo.org> apr-util-1.5.2.ebuild:
  Stable for ppc64, wrt bug #477296

  04 Aug 2013; Agostino Sarubbo <ago@gentoo.org> apr-util-1.5.2.ebuild:
  Stable for ia64, wrt bug #477296

  03 Aug 2013; Agostino Sarubbo <ago@gentoo.org> apr-util-1.5.2.ebuild:
  Stable for amd64, wrt bug #477296

  03 Aug 2013; Jeroen Roovers <jer@gentoo.org> apr-util-1.5.2.ebuild:
  Stable for HPPA (bug #477296).

  03 Aug 2013; Agostino Sarubbo <ago@gentoo.org> apr-util-1.5.2.ebuild:
  Stable for sparc, wrt bug #477296

  18 Jul 2013; Lars Wendler <polynomial-c@gentoo.org> -apr-util-1.5.1.ebuild,
  apr-util-1.5.2.ebuild, metadata.xml:
  Added myself as maintainer. Removed old. Fixed dependency on dev-libs/apr.

*apr-util-1.5.2 (20 Jun 2013)

  20 Jun 2013; Lars Wendler <polynomial-c@gentoo.org> +apr-util-1.5.2.ebuild:
  Non-maintainer commit: Version bump.

  21 Feb 2013; Zac Medico <zmedico@gentoo.org> apr-util-1.5.1.ebuild:
  Add ~arm-linux keyword.

*apr-util-1.5.1 (28 Nov 2012)

  28 Nov 2012; Lars Wendler <polynomial-c@gentoo.org> +apr-util-1.5.1.ebuild:
  Non-maintainer commit: Version bump.

  28 Nov 2012; Christoph Junghans <ottxor@gentoo.org> apr-util-1.4.1.ebuild:
  added prefix support

  27 Nov 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop apache herd as discussed in http://www.gossamer-
  threads.com/lists/gentoo/dev/262834

  12 May 2012; Alexis Ballier <aballier@gentoo.org> apr-util-1.4.1.ebuild:
  keyword ~amd64-fbsd

*apr-util-1.4.1 (27 Dec 2011)

  27 Dec 2011; Jesus Rivero <neurogeek@gentoo.org> +apr-util-1.4.1.ebuild,
  metadata.xml:
  Version bump. Ebuild by Arfrever.
