@@ -8,23 +8,23 @@ DIST apr-1.4.6.tar.bz2 785724 SHA256 9b635e60feb163e6fc6c375721f71f44d7e26d6b9cd
 DIST apr-1.4.8.tar.bz2 772927 SHA256 61b8d2f8d321c6365ee3d71d0bb41f3a89c44da6124cc5b407a3b8319d660421 SHA512 48483647fd958cae6b27672cfe10d3905fd2d4280b686a64deb5e166c239aa7d9838d61a199b5db836c47e63acebee9fa95804d60543cb581fef87bcc150c15b WHIRLPOOL c0e3e17470970734cd36b1b72837b3ed39e0488ef4291eb3a3f9482dffabb72aab85b4d9a8482d9c4cc3a66ce530bd81e8076b98e1fa10b086089266fa9b2f0a
 EBUILD apr-1.4.5.ebuild 2131 SHA256 13c591ee66cdfef1d3da5fbcf18925b18f3415ede24255be1897156568d4d7e5 SHA512 392d57566c0e5ff44efcbcdc8a4a9825a0ecddc2bbd1df638a9e278a2ff9fb7d2186d5bf031a0bf5e2a7712a0df24bdc985af38e50ee8eda1983ad877e267a76 WHIRLPOOL d758fa4274a653b7a202526d2579a46978b8a0f144d5c693b3f0a7b3dd1553be4abbbc425780d5cd458d3bbb53405a7aaa2635a9cd12f02ee1ddf814da613e49
 EBUILD apr-1.4.6-r1.ebuild 3433 SHA256 1abc9204a89bf93f29679ee8e283d98ef35d91e5e2ddb4abc3b81181d0b83f1d SHA512 3286f96d5bada82ee63442c4b4f1c2984f6e7653e74a957a1e92a4cfa53147ec89f4f94165d0571e4e849f5bd7feac6a4286565740ba1caf3a486fcb2634869e WHIRLPOOL 92304dd3b3bbc2e2affc107e27e5c668046fdaf9d9dc03d27820ade7e6a5f7f07105aeedef00f081574963f8fc78c0309b3b4ebb6d9dc52c63c91d851e135d64
-EBUILD apr-1.4.8-r1.ebuild 3337 SHA256 be3e6d83d0807b6c3e5e806f52cdf2487ec1ee83c0e2d4be2b35abdce07ade2a SHA512 d6554f732085231fb84e7472fec7bbf4339927d97def79c3b6b066f99919f2472aad0e6ba743e96983ee833efe0693dd39795a46319a4ebb508c02fc2ca229cc WHIRLPOOL e309e810f2a3d08decc17537536cad87c6caf6651dafe1aac422d55ab7b5e2b537af37248789d161919716fb762afce3a0d00ad4e818f03b8707b18b8171a6bf
-MISC ChangeLog 23667 SHA256 17cfd018203fa86659fd7c5e8e79f5530f0ebb81bcc402d24b49be7d41bc9829 SHA512 cdf18fca3b426d7152b408b931644c7e3c376e74cd66ad1f78665f1e53f9ddc2775b2494918edfcf4941127e7f344ff811ccd8dc9e8d7519a2cd6b2c6f7a7719 WHIRLPOOL 4c9dc9b8fd62d3f9c683f894c5c2c6aad583a635a27cc494c0a76faddfbbc0ff01d512a9feff9251ae2353558eb76f95c1dbdc33e54dbbf4e4f30e2062241b97
+EBUILD apr-1.4.8-r1.ebuild 3336 SHA256 b8e24ece4e71c9564f0aa91b01cfb72898dd63de5853d751afce05a2162dba7a SHA512 201ddd3a58aa666cbbc1c9fb17c955a25489715b24c8817fe85d9e9f31df6c4900f7da38455156dbb2183b7a4890f51e33888a15408eadc32f81dcc109bbccef WHIRLPOOL 0709fb8b94cda88d5cda621073ed07132ced5054a55d309f26d12c74acb93c95ad2495474cee00208cd9972f9c63b3438b3ce1c32779cdf8b0392067cf89e621
+MISC ChangeLog 23772 SHA256 1812d185706e829c38c92b18dea1eb43d8c6e9b9c7acf97bff8cbdbe2d8d0b7d SHA512 fd1063d86b5d446617ea4f5aa8ca008db1b94ea9b56a3bf9a61a4b7d43a2c36849c68969cb93db7fad94a0959c1fa8e96b195f5090a0ade0044777983fdece00 WHIRLPOOL c19f03618a72b20dc4258ce8fb90656e7d97bbbca580be6accff5a7de3aedc7937efe3ddf4e4188b6898c7fa73af04bf890f58a1f9aef20cf7c2ffce5a2757af
 MISC metadata.xml 466 SHA256 3e3cb358f6d61dfd16872d01e306923d787c3b13fad7e54a81a1ddf79ca6ae0f SHA512 12d44e3a00fc233793a42dcb1edcaffb5efa5cf9fdcf3ba06c2be9e85b41b84fe9ffab2e261b9066c878548538cb50b4a328c11c8f7b3817d25dba4055c304d7 WHIRLPOOL 37ca2ac185c882568e7d505e8aa21bcab2c4055b57b25ba4822f602e38bfe8b9241d3c7254eabbe532a8e0ebfc1c7fa03acbd0e78307d48579659e035c0d1404
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSAPW6AAoJELp701BxlEWf9CUP/2WoIOKNArtIjURzh4q2R+Th
-QP2J0TKdCTiZhqhlzn9K9tjgRJL7YjY64Cg4sGPdw2fyKDj7IsKAKArAmZterkIL
-LtqN8P6wRC9O9Mj9EJQT2ZL5njlHamYXNePJP9FGe8wdFXUZjgvewsE8OePcbkyJ
-j+wuDQ926UxS09Bpzjlv9DA3m65HaeHds4bAWiyXBaEE2Zbby4ViULhQ6NaDfRgN
-z+HxfpKsWx4q/L216uqkilqHuUy8ydJAg2PvrG+hCYsl99orwVBUbcy6x91qHDFn
-a6iMrmt8zjaH1vDM0yPO9q1OzB8Vhqd3pd0jK1gZmke+YyzuDDym+8j+hZAAuWAm
-fNqgcCXfTLNIE1bLBMsL/LojKa4VSExEhmMTZHSkwPTvq3wnCurYHTj1rMfebh5x
-nbElceenmwMtXXU5RXop+EcMeTlaxo0Hjma+LxTGcWRVwdm1hAP1/X2429cTUv8x
-2UsX0KKSY0wgbUmd0O5rkwV+8MTIV4xP2V8gQ86sjpjEJ4CbhorALly+/n5KznXt
-KwF87GdolZ0CV33m2+v/IaBglM9shsMug7WRas+z+ijsnJrpzjt4lPcrta8/6IuD
-NAO6oA7bsHrgL3i3F+GjjPFebMh1Z18tkn6BgNyaloFhVQ8OLqe0gBgz7Tj2l9/w
-L9lrt08hCkbpUcAYBYpr
-=+0AD
+iQIcBAEBCgAGBQJSBjepAAoJELp701BxlEWfhRcP/0RpKnBBbbo7B+ZVEK7l+3LS
+OS62PhroJubhV6TxanFBZqVm1CB6KfF6HH/GdjpFAjczoB/Sw3kimdHP+QOLlYAj
+wCf9iG+wK3s6LpzEre6Ya1x0Fw4djDUk1QSAOSCZmkK0WgS+Z/3zDuluzBHOo/MD
+pIyeu8vSwL+/kQQpb50NOCMe7p5H1aRcsCz1pK85HYaheu5+6svbkPj05Z6ZO64p
+CtBmQX1WyeqVOaCNGJb3M7YMLnzlCnbvy1Plojr5GSde1/pPfEE6jg+N1tPeycBn
+Qz5fPOyQR65ppfZlE1IJCzsNlgtwinasORwYH6lsxz3O0UwXGqZC69lemudclLtb
+9f36yBVLI0QRR8/Kijl4bYy5dBy/UthaRywRD4r6FzZ3negpjOTMvXB9jj+POPAT
+KK2MPsSiTlxJCysRsRMRWaSeGWcsNR+mLlYUfQy+EcBnuv4P8Pk2lSYBGhmQvc1o
+1kgLXhaIYMyFhucFBjNKGD8UML55ijtonqxo4RuUkvKmuRxGanS3tOmB0l5Tkhdj
+d/zJO6x3tUF9H2LaLGR6cI9mgj9XmvXWdJ7YTNRcRf/wQt4OfFjSLjse5huB9H7E
+kMy83okHlpkA6+WTbaYjna4YhkVllHcI2OyhdfwugObkWbY5s1HgZqYrPivZFC0D
+OVwhIndBpYSN80zBIUyG
+=RGaP
 -----END PGP SIGNATURE-----
