@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/apr
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr/ChangeLog,v 1.197 2013/08/06 13:13:30 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr/ChangeLog,v 1.198 2013/08/10 12:56:10 ago Exp $
+
+  10 Aug 2013; Agostino Sarubbo <ago@gentoo.org> apr-1.4.8-r1.ebuild:
+  Stable for ppc, wrt bug #477296
 
   06 Aug 2013; Agostino Sarubbo <ago@gentoo.org> apr-1.4.8-r1.ebuild:
   Stable for s390, wrt bug #477296
