@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/apr-util
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.186 2013/08/06 13:13:37 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.187 2013/08/10 12:56:20 ago Exp $
+
+  10 Aug 2013; Agostino Sarubbo <ago@gentoo.org> apr-util-1.5.2.ebuild:
+  Stable for ppc, wrt bug #477296
 
   06 Aug 2013; Agostino Sarubbo <ago@gentoo.org> apr-util-1.5.2.ebuild:
   Stable for s390, wrt bug #477296
